fixed button alignment

--- a/src/App.css
+++ b/src/App.css
@@ -160,3 +160,8 @@ a:hover {
   margin-bottom: 5px;
   margin-top: 5px;
 }
+
+.navbar-expand .navbar-nav {
+  margin-left: auto;
+  margin-right: 10px;
+}
